Bug 29068 - [4.2 Regression] Bootstrap fails building libjava on SPARC/Solaris
Summary: [4.2 Regression] Bootstrap fails building libjava on SPARC/Solaris
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: boehm-gc (show other bugs)
Version: 4.2.0
: P3 blocker
Target Milestone: 4.2.0
Assignee: Tom Tromey
URL:
Keywords: build
Depends on:
Blocks: 13212
  Show dependency treegraph
 
Reported: 2006-09-13 20:18 UTC by Kaveh Ghazi
Modified: 2010-04-28 20:12 UTC (History)
3 users (show)

See Also:
Host: sparc-sun-solaris2.*
Target: sparc-sun-solaris2.*
Build: sparc-sun-solaris2.*
Known to work:
Known to fail: 4.2.0
Last reconfirmed: 2006-09-13 21:15:31


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kaveh Ghazi 2006-09-13 20:18:51 UTC
On mainline I'm getting a bootstrap failure building in the libjava directory on sparc-sun-solaris2.10:

Undefined                       first referenced
 symbol                             in file
GC_get_thread_stack_base            ./.libs/libgcj.so
ld: fatal: Symbol referencing errors. No output written to .libs/jv-convert
collect2: ld returned 1 exit status
make[3]: *** [jv-convert] Error 1

I most recently was able to get a successful bootstrap on Aug 18th:
http://gcc.gnu.org/ml/gcc-testresults/2006-08/msg00798.html

It was probably triggered by this change because that's where GC_get_thread_stack_base was introduced:

2006-08-21  Bryce McKinlay  <mckinlay@redhat.com>

        PR libgcj/13212:
        * configure.ac: Check for pthread_getattr_np(). Remove
        GC_PTHREAD_SYM_VERSION detection.
        * include/gc.h (GC_register_my_thread, GC_unregister_my_thread,
        GC_get_thread_stack_base): New declarations.
        * pthread_support.c (GC_register_my_thread, GC_unregister_my_thread,
        GC_get_thread_stack_base): New functions.
        (GC_delete_thread): Don't try to free the first_thread.
        * misc.c (GC_init_inner): Use GC_get_thread_stack_base() if possible.
        (pthread_create_, constr): Removed.
        (pthread_create): Don't rename.
        * include/gc_ext_config.h.in: Rebuilt.
        * include/gc_pthread_redirects.h (pthread_create): Define
        unconditionally.
        * include/gc_config.h.in: Rebuilt.
        * configure: Rebuilt.
Comment 1 Eric Botcazou 2006-09-13 20:28:41 UTC
Same on SPARC/Solaris 8 and 9.
Comment 2 Andrew Pinski 2006-09-13 20:36:21 UTC
This is why I mentioned Java people should not be committing new features this late.

See also:
http://gcc.gnu.org/ml/java/2006-09/msg00021.html
Comment 3 Eric Botcazou 2006-09-13 20:40:33 UTC
Please, Andrew, stop overwriting my changes.  Thanks.
Comment 4 Andrew Pinski 2006-09-13 20:45:14 UTC
(In reply to comment #3)
> Please, Andrew, stop overwriting my changes.  Thanks.
If the bugzilla would allow me to merge the changes, it would be better but it does not.  Also I loaded the page right before you changed stuff and I had changed the summary to include [4.2 Regression] but right after you committed your changes, I committed mine and just pressed continue committing since bugzilla does not allow me to pick and chose whos changes gets included.
Comment 5 Eric Botcazou 2006-09-13 20:48:52 UTC
> If the bugzilla would allow me to merge the changes, it would be better but it
> does not.  Also I loaded the page right before you changed stuff and I had
> changed the summary to include [4.2 Regression] but right after you committed
> your changes, I committed mine and just pressed continue committing since
> bugzilla does not allow me to pick and chose whos changes gets included.

Simply do not press continue, the warning displayed by Bugzilla is pretty clear.
Comment 6 Tom Tromey 2006-09-14 18:06:20 UTC
Subject: Bug 29068

Author: tromey
Date: Thu Sep 14 18:06:04 2006
New Revision: 116948

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=116948
Log:
libjava
	PR boehm-gc/29068:
	* boehm.cc (_Jv_GCAttachThread): Disable on Solaris.
	(_Jv_GCDetachThread): Likewise.
boehm-gc
	PR boehm-gc/29068.
	* misc.c (GC_init_inner): Don't use GC_get_thread_stack_base on
	Solaris.

Modified:
    trunk/boehm-gc/ChangeLog
    trunk/boehm-gc/misc.c
    trunk/libjava/ChangeLog
    trunk/libjava/boehm.cc

Comment 7 Tom Tromey 2006-09-14 18:07:11 UTC
Fix checked din.
Comment 8 Eric Botcazou 2006-09-20 17:42:35 UTC
Thanks for the fix.
Comment 9 Rainer Orth 2010-04-28 20:11:43 UTC
Reopened ...
Comment 10 Rainer Orth 2010-04-28 20:12:16 UTC
... to close as FIXED.