libjava 	PR boehm-gc/29068: 	* boehm.cc (_Jv_GCAttachThread): Disable on Solaris. 	(_Jv_GCDetachThread): Likewise. boehm-gc 	PR boehm-gc/29068. 	* misc.c (GC_init_inner): Don't use GC_get_thread_stack_base on 	Solaris.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116948 138bc75d-0d04-0410-961f-82ee72b054a4