libjava/boehm.cc
@@ -701,7 +701,8 @@ _Jv_GCAttachThread ()
 {
   // The registration interface is only defined on posixy systems and
   // only actually works if pthread_getattr_np is defined.
-#ifdef HAVE_PTHREAD_GETATTR_NP
+  // FIXME: until gc7 it is simpler to disable this on solaris.
+#if defined(HAVE_PTHREAD_GETATTR_NP) && !defined(GC_SOLARIS_THREADS)
   GC_register_my_thread ();
 #endif
 }
@@ -709,7 +710,7 @@ _Jv_GCAttachThread ()
 void
 _Jv_GCDetachThread ()
 {
-#ifdef HAVE_PTHREAD_GETATTR_NP
+#if defined(HAVE_PTHREAD_GETATTR_NP) && !defined(GC_SOLARIS_THREADS)
   GC_unregister_my_thread ();
 #endif
 }
